[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/chapters/ChapterHome.gd" type="Script" id=1]
[ext_resource path="res://scenes/location/Appartment.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/location/CorridorTop.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/location/Corridor.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/location/BackStreetBuilding.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/core/TPTrigger.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/ui/UI.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/characters/Character.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/core/DialogTrigger.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/props/appart/Door.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/props/Phone.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/models/appartment/buildings-bg.glb" type="PackedScene" id=13]

[node name="ChapterHome" type="Spatial"]
script = ExtResource( 1 )

[node name="Appartment" parent="." instance=ExtResource( 2 )]

[node name="In" type="Spatial" parent="Appartment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.667265, 0, -2.62075 )

[node name="Out" type="Spatial" parent="Appartment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.667265, 0, -3.76491 )

[node name="Tween" type="Tween" parent="Appartment"]

[node name="Door" parent="Appartment" instance=ExtResource( 11 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.49672, 0, 0.576357 )

[node name="Corridor" parent="." instance=ExtResource( 4 )]

[node name="TP" type="Spatial" parent="Corridor"]

[node name="TPTop" parent="Corridor/TP" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.725274, 2.4628, 4.63118 )

[node name="TPBottom" parent="Corridor/TP" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.597142, -0.923872, 4.63118 )

[node name="CorridorBellow" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.5, 0 )

[node name="CorridorTop" parent="." instance=ExtResource( 3 )]

[node name="Street" type="Spatial" parent="."]

[node name="BackStreetBuilding" parent="Street" instance=ExtResource( 5 )]

[node name="DialogBouncer" parent="Street/BackStreetBuilding" groups=[
"dialog-home",
] instance=ExtResource( 10 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2.5904, 1.31211, -5.94848 )
hover_key = "action_bouncer"
dialogs = [ "dialog_1_bouncer_01", "dialog_1_bouncer_02", "dialog_1_bouncer_03" ]
who = "bouncer"

[node name="Character" parent="Street/BackStreetBuilding" instance=ExtResource( 9 )]
transform = Transform( 0.757736, 0, 0.652561, 0, 1, 0, -0.652561, 0, 0.757736, -0.969, -5, -5.417 )
default = "idle"

[node name="DialogTrigger" parent="Street/BackStreetBuilding/Character" groups=[
"dialog-home",
] instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.31211, 0 )
hover_key = "action_hover_friend"
dialogs = [ "dialog_1_friend_01", "dialog_1_friend_02" ]
who = "friend"

[node name="Player" parent="." instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.277124, 0, 2.27767 )

[node name="UI" parent="." instance=ExtResource( 8 )]
visible = false

[node name="Phone" parent="." groups=[
"chapter",
] instance=ExtResource( 12 )]
transform = Transform( -0.464842, 0, 0.885394, 0, 1, 0, -0.885394, 0, -0.464842, -0.307874, 0.330675, 1.39267 )

[node name="buildings-bg" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.71749, 0 )

[node name="buildings-bg2" parent="." instance=ExtResource( 13 )]
transform = Transform( -0.504015, 0, -0.863695, 0, 1, 0, 0.863695, 0, -0.504015, 0.473095, 1.88262, -3.4365 )
[connection signal="tween_all_completed" from="Appartment/Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="body_entered" from="Corridor/TP/TPTop" to="." method="_on_TPTop_body_entered"]
[connection signal="body_entered" from="Corridor/TP/TPBottom" to="." method="_on_TPBottom_body_entered"]
[connection signal="end_of_chapter_one" from="Street/BackStreetBuilding" to="." method="_on_BackStreetBuilding_end_of_chapter_one"]
[connection signal="go_to" from="Street/BackStreetBuilding" to="." method="_on_BackStreetBuilding_go_to"]
[connection signal="picked_up" from="Phone" to="." method="_on_Phone_picked_up"]
